--- a/L2/public/stylesheet.css
+++ b/L2/public/stylesheet.css
@@ -26,3 +26,13 @@ body {
     margin: auto;
     color: rgb(255, 255, 255);
 }
+canvas {
+    padding: 0;
+    margin: auto;
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
